add: tests to achive 100% coverage
testing commit message