@@ -1,10 +1,10 @@
 package com.brunpola.cv_management.services.impl;
 
 import com.brunpola.cv_management.domain.entities.ProjectEntity;
+import com.brunpola.cv_management.exceptions.project.ProjectNotFoundException;
 import com.brunpola.cv_management.repositories.ProjectRepository;
 import com.brunpola.cv_management.services.ProjectService;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import org.springframework.stereotype.Service;
 
@@ -30,7 +30,7 @@ public class ProjectServiceImpl implements ProjectService {
    * @return created ProjectEntity
    */
   @Override
-  public ProjectEntity createProject(ProjectEntity project) {
+  public ProjectEntity save(ProjectEntity project) {
     return projectRepository.save(project);
   }
 
@@ -41,7 +41,24 @@ public class ProjectServiceImpl implements ProjectService {
    */
   @Override
   public List<ProjectEntity> findAll() {
-    return StreamSupport.stream(projectRepository.findAll().spliterator(), false)
-        .collect(Collectors.toList());
+    return StreamSupport.stream(projectRepository.findAll().spliterator(), false).toList();
+  }
+
+  @Override
+  public ProjectEntity findOne(long id) {
+    return projectRepository.findById(id).orElseThrow(() -> new ProjectNotFoundException(id));
+  }
+
+  @Override
+  public boolean isExists(Long id) {
+    return projectRepository.existsById(id);
+  }
+
+  @Override
+  public void delete(Long id) {
+    if (!isExists(id)) {
+      throw new ProjectNotFoundException(id);
+    }
+    projectRepository.deleteById(id);
   }
 }
